# pongo

./: .dev.vars.example  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  ARTICLE.md  AUTOMATION-IDEAS.md  COMPLETION-PLAN.md  COST-OPTIMIZATION-SUMMARY.md  COST-OPTIMIZATION.md  Cargo.toml  DEPLOY.md  DEVELOPMENT.md  LICENSE  README.md  SPEC.md  TEST-PLAN.md  WEBGPU_RESEARCH.md  WEBSOCKET_STATUS.md  package.json  wrangler.toml
.cursor/rules/: project-rules.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml
.husky/: pre-commit
client_wasm/: Cargo.toml
client_wasm/shaders/: basic.wgsl  pong.wgsl  trail.wgsl
client_wasm/src/: camera.rs  fsm.rs  input.rs  lib.rs  mesh.rs  network.rs  prediction.rs  simulation.rs  state.rs
client_wasm/src/renderer/: draw.rs  init.rs  mod.rs  pipeline.rs  resources.rs  shaders.rs
docs/: STATE_MACHINE.md
game_core/: Cargo.toml
game_core/src/: components.rs  config.rs  lib.rs  map.rs  params.rs  resources.rs
game_core/src/systems/: collision.rs  combat.rs  energy.rs  gc.rs  hill.rs  input.rs  mod.rs  movement.rs  pickups.rs  respawn.rs  scoring.rs
game_core/tests/: integration_test.rs
lobby_worker/: Cargo.toml  index.html  script.js  style.css
lobby_worker/src/: lib.rs
proto/: Cargo.toml
proto/src/: lib.rs
scripts/: check-logs.sh  deploy-test.sh  test-all.sh
server_do/: Cargo.toml
server_do/src/: game_state.rs  lib.rs  tests.rs
worker/: index.html  index.js
