[package]
name = "client_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "KeyboardEvent",
    "WebSocket",
] }
wgpu = "24.0"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27"
console_error_panic_hook = "0.1"
proto = { path = "../proto" }
game_core = { path = "../game_core" }
hecs = "0.10"
getrandom = { version = "0.2", features = ["js"] }
