[package]
name = "client_wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "KeyboardEvent",
    "WebSocket",
] }
wgpu = "24.0"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27"
console_error_panic_hook = "0.1"
proto = { path = "../proto" }
game_core = { path = "../game_core" }
hecs = "0.10"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
