[package]
name = "lobby_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server_do = { path = "../server_do" }
getrandom = { version = "0.2", features = ["js"] }

