[package]
name = "proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }

