[package]
name = "server_do"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
game_core = { path = "../game_core" }
proto = { path = "../proto" }

